obnam (0.18) squeeze; urgency=low

  * New upstream release. Third BETA release.
  * debian/pycompat: useless, removed.

 -- Lars Wirzenius <liw@liw.fi>  Sat, 21 May 2011 08:41:29 +0100

obnam (0.17) squeeze; urgency=low

  * New upstream release. Second BETA release.

 -- Lars Wirzenius <liw@liw.fi>  Sat, 21 May 2011 08:41:29 +0100

obnam (0.16) squeeze; urgency=low

  * New upstream release. The first BETA release.

 -- Lars Wirzenius <liw@liw.fi>  Sun, 17 Apr 2011 10:45:58 +0100

obnam (0.15.1) squeeze; urgency=low

  * New upstream version.

 -- Lars Wirzenius <liw@liw.fi>  Mon, 21 Mar 2011 08:29:05 +0000

obnam (0.15) squeeze; urgency=low

  * New upstream release.

 -- Lars Wirzenius <liw@liw.fi>  Mon, 21 Mar 2011 08:10:33 +0000

obnam (0.14) squeeze; urgency=low

  * New upstream release.

 -- Lars Wirzenius <liw@liw.fi>  Wed, 29 Dec 2010 20:41:15 +0000

obnam (0.13) squeeze; urgency=low

  * New upstream release.
    - checkpointing bugfix
    - upload speed displayed during backups
    - posix_fadvise used when reading/writing data to local filesystem
    - --lru-size option
  * debian/control: Upgrade dependencies (run-time and build-time) for
    python-btree and python-ttystatus.

 -- Lars Wirzenius <liw@liw.fi>  Tue, 13 Jul 2010 09:21:43 +1200

obnam (0.12.1) squeeze; urgency=low

  * debian/control: Add python-paramiko as build and run-time dependency.

 -- Lars Wirzenius <liw@liw.fi>  Sun, 11 Jul 2010 20:06:48 +1200

obnam (0.12) squeeze; urgency=low

  * New upstream release.
    - speed optimizations, resulting in incompatible on-disk data structures
    - preliminary SFTP support
    - includes plugins in .deb (via fix in setup.py)
  * debian/control: Bumped Standards-Version. No other changed needed.
  * debian/control: Bumped required version of python-btree.

 -- Lars Wirzenius <liw@liw.fi>  Sun, 11 Jul 2010 19:07:33 +1200

obnam (0.11) squeeze; urgency=low

  * New upstream release.
    - speed optimizations
    - some new options
