@@ -1,11 +1,8 @@
 #!/usr/bin/make -f
 %:
-	dh $@ --with-buildsystem=python_distutils
+	dh $@ --with=python2 --with-buildsystem=python_distutils
 
-override_dh_auto_install:
-	python setup.py install --prefix=debian/obnam/usr
-	
 override_dh_auto_build:
-	dh_auto_build $@ --with-buildsystem=python_distutils
+	dh_auto_build $@ --with=python2 --with-buildsystem=python_distutils
 	setuppy-debian-versions-match
 
