@@ -2,8 +2,9 @@ obnam (0.18) squeeze; urgency=low
 
   * New upstream release. Third BETA release.
   * debian/pycompat: useless, removed.
+  * Converted to use dh_python2.
 
- -- Lars Wirzenius <liw@liw.fi>  Sat, 21 May 2011 08:41:29 +0100
+ -- Lars Wirzenius <liw@liw.fi>  Wed, 20 Jul 2011 23:04:35 +0100
 
 obnam (0.17) squeeze; urgency=low
 
